--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
                             <div class="row single-slide align-items-center d-flex">
                                 <div class="col-lg-5 col-md-6">
                                     <div class="banner-content">
-                                        <h1>Nike New <br>Collection!</h1>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                        <h1>Hydrate with Our Water Jars</h1>
+                                        <p>Durable, Stylish, and Eco-Friendly Water Jars for Every Lifestyle – Quench Your Thirst Anytime, Anywhere </p>
                                         <div class="add-bag d-flex align-items-center">
                                             <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
                                             <span class="add-text text-uppercase">Add to Bag</span>
