--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <section class="wp-icon-section">
             <div class="wp-icon">
-                <a href="https://web.whatsapp.com/send?phone=919686677888&text=&app_absent=0" target="_blank">
+                <a href="https://web.whatsapp.com/send?phone=919535255655&text=&app_absent=0" target="_blank">
                         <img src="img/wp-icon.svg" alt="whatsapp icon ">
                 </a>
             </div>
@@ -101,8 +101,7 @@
                                         <h1>Hydrate with Our Water Jars</h1>
                                         <p>Durable, Stylish, and Eco-Friendly Water Jars for Every Lifestyle – Quench Your Thirst Anytime, Anywhere </p>
                                         <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
-                                            <span class="add-text text-uppercase">Add to Bag</span>
+                                            <a class="add-btn" href="\contact.html">Contact Us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -120,8 +119,7 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                                         <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
-                                            <span class="add-text text-uppercase">Add to Bag</span>
+                                            <a class="add-btn" href="/contact.html">Contact Us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -207,7 +205,7 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p1.jpg" alt="">
+                                <img class="img-fluid" src="img/product/20-liter-pat-bottol.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
@@ -236,7 +234,7 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p2.jpg" alt="">
+                                <img class="img-fluid" src="img/product/dispancer.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
@@ -265,7 +263,7 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p3.jpg" alt="">
+                                <img class="img-fluid" src="img/product/dispancer-with-can.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
@@ -926,21 +924,6 @@
                                     <div class="info"></div>
                                 </form>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3  col-md-6 col-sm-6">
-                        <div class="single-footer-widget mail-chimp">
-                            <h6 class="mb-20">Instragram Feed</h6>
-                            <ul class="instafeed d-flex flex-wrap">
-                                <li><img src="img/i1.jpg" alt=""></li>
-                                <li><img src="img/i2.jpg" alt=""></li>
-                                <li><img src="img/i3.jpg" alt=""></li>
-                                <li><img src="img/i4.jpg" alt=""></li>
-                                <li><img src="img/i5.jpg" alt=""></li>
-                                <li><img src="img/i6.jpg" alt=""></li>
-                                <li><img src="img/i7.jpg" alt=""></li>
-                                <li><img src="img/i8.jpg" alt=""></li>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-6">
