bug fix and adding a proper map

--- a/contact.html
+++ b/contact.html
@@ -120,9 +120,9 @@
 	<!--================Contact Area =================-->
 	<section class="contact_area section_gap_bottom">
 		<div class="container">
-			<div id="mapBox" class="mapBox" data-lat="40.701083" data-lon="-74.1522848" data-zoom="13" data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-			 data-mlat="40.701083" data-mlon="-74.1522848">
-			</div>
+            <div class="mapbox">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d485.921407594943!2d77.50008273659365!3d13.012013674113907!3m2!1i1024!2i768!4f13.1!2m1!1sstar%20plast!5e0!3m2!1sen!2sin!4v1718536951121!5m2!1sen!2sin" width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
 			<div class="row">
 				<div class="col-lg-3">
 					<div class="contact_info">
@@ -162,7 +162,7 @@
 							</div>
 						</div>
 						<div class="col-md-12 text-right">
-							<button type="submit" value="submit" class="primary-btn">Send Message</button>
+							<button type="submit" value="submit" class="primary-btn" style="background:#0aadf3">Send Message</button>
 						</div>
 					</form>
 				</div>
