--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- meta character set -->
         <meta charset="UTF-8">
         <!-- Site Title -->
-        <title>Karma Shop</title>
+        <title>Star Plast</title>
         <!--
             CSS
             ============================================= -->
@@ -101,7 +101,7 @@
                                         <h1>Hydrate with Our Water Jars</h1>
                                         <p>Durable, Stylish, and Eco-Friendly Water Jars for Every Lifestyle – Quench Your Thirst Anytime, Anywhere </p>
                                         <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="\contact.html">Contact Us</a>
+                                            <a class="add-btn" href="contact.html">Contact Us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -119,7 +119,7 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                                         <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="/contact.html">Contact Us</a>
+                                            <a class="add-btn" href="contact.html">Contact Us</a>
                                         </div>
                                     </div>
                                 </div>
