--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p4.jpg" alt="">
+                                <img class="img-fluid" src="img/product/RO-tubes.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
@@ -320,7 +320,7 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p5.jpg" alt="">
+                                <img class="img-fluid" src="img/product/18-eliter-pat-paper-bottl.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
@@ -349,7 +349,7 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p6.jpg" alt="">
+                                <img class="img-fluid" src="img/product/battle-handles.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
@@ -618,7 +618,7 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p4.jpg" alt="">
+                                <img class="img-fluid" src="img/product/RO-tubes.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
