--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <section class="wp-icon-section">
             <div class="wp-icon">
-                <a href="https://web.whatsapp.com/send?phone=919535255655&text=&app_absent=0" target="_blank">
+                <a href="https://wa.me/919535255655&text?text=hi" target="_blank">
                         <img src="img/wp-icon.svg" alt="whatsapp icon ">
                 </a>
             </div>
