adding product description

--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
                             <div class="row single-slide">
                                 <div class="col-lg-5">
                                     <div class="banner-content">
-                                        <h1>Nike New <br>Collection!</h1>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                        <h1>Convenient 20L Water Cans</h1>
+                                        <p>
+                                        Enjoy pure, hassle-free hydration with our 20-liter water cans for any occasion.
+                                        </p>
                                         <div class="add-bag d-flex align-items-center">
                                             <a class="add-btn" href="contact.html">Contact Us</a>
                                         </div>
@@ -194,10 +195,8 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-6 text-center">
                             <div class="section-title">
-                                <h1>Latest Products</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                dolore
-                                magna aliqua.</p>
+                                <h1>Complete Water Storage Solutions</h1>
+                                <p>From PET Preforms to Dispensers – Everything You Need for Water Cans</p>
                             </div>
                         </div>
                     </div>
@@ -207,21 +206,21 @@
                             <div class="single-product">
                                 <img class="img-fluid" src="img/product/20-liter-pat-bottol.png" alt="">
                                 <div class="product-details">
-                                    <h6>addidas New Hammer sole
-                                        for Sports person</h6>
+                                    <h6>20 liter pet perform bottle </h6>
+                                    <p>Our 20-liter PET preform bottle, in 630g, 660g, and 700g variants, offers durable and versatile large-capacity storage.</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
                                             <span class="ti-bag"></span>
-                                            <p class="hover-text">add to bag</p>
+                                            <p class="hover-text">630 Grams</p>
                                         </a>
                                         <a href="" class="social-info">
                                             <span class="lnr lnr-heart"></span>
-                                            <p class="hover-text">Wishlist</p>
+                                            <p class="hover-text">660 Grams</p>
                                         </a>
                                         <a href="" class="social-info">
                                             <span class="lnr lnr-sync"></span>
-                                            <p class="hover-text">compare</p>
+                                            <p class="hover-text">700 Grams</p>
                                         </a>
                                         <a href="" class="social-info">
                                             <span class="lnr lnr-move"></span>
@@ -236,8 +235,8 @@
                             <div class="single-product">
                                 <img class="img-fluid" src="img/product/dispancer.png" alt="">
                                 <div class="product-details">
-                                    <h6>addidas New Hammer sole
-                                        for Sports person</h6>
+                                    <h6> BT Can with Dispancer </h6>
+                                    <p>The BT dispenser ensures effortless and efficient dispensing of water from our 20-liter cans.</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
@@ -265,8 +264,8 @@
                             <div class="single-product">
                                 <img class="img-fluid" src="img/product/dispancer-with-can.png" alt="">
                                 <div class="product-details">
-                                    <h6>addidas New Hammer sole
-                                        for Sports person</h6>
+                                    <h6>BT Can with Dispancer </h6>
+                                    <p>Our BT can with dispenser offers convenient and durable 20-liter water dispensing.</p>
                                     <div class="prd-bottom">
                                         <a href="" class="social-info">
                                             <span class="ti-bag"></span>
@@ -293,8 +292,8 @@
                             <div class="single-product">
                                 <img class="img-fluid" src="img/product/RO-tubes.png" alt="">
                                 <div class="product-details">
-                                    <h6>addidas New Hammer sole
-                                        for Sports person</h6>
+                                    <h6>RO Tube</h6>
+                                    <p>RO tubes in 1/4 inch, 3/8 inch, and 1/2 inch sizes, perfect for diverse water purification setups.</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
@@ -322,8 +321,8 @@
                             <div class="single-product">
                                 <img class="img-fluid" src="img/product/18-eliter-pat-paper-bottl.png" alt="">
                                 <div class="product-details">
-                                    <h6>addidas New Hammer sole
-                                        for Sports person</h6>
+                                    <h6>18 Liter Pet Performs Bottle </h6>
+                                    <p>Our 18-liter PET performs bottle combines durability and practicality, ideal for reliable and efficient large-capacity water storage.</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
