adding terms and conditnion + privercy policy this is added to footer also

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 
     <head>
@@ -655,12 +655,17 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
-                    <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
+                    <div class="col-lg-2 col-md-6 col-sm-6">
+                        <div class="single-footer-widget">
+                            <h6>Useful Links</h6>
+                            <ul>
+                                <li><a href="privercy.html">Priversy Policy</a></li>
+                                <li><a href="terms-and-services.html">Terms and Condition</a></li>
+                            </ul>
+
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </footer>
