adding image to website

--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                             <div class="single-product">
                                 <img class="img-fluid" src="img/product/battle-handles.png" alt="">
                                 <div class="product-details">
-                                    <h6>addidas New Hammer sole
-                                        for Sports person</h6>
+                                    <h6> Lifting Handle </h6>
+                                    <p>Designed for easy grip and superior durability, our handle makes carrying 20-liter water jars a breeze. Perfect for home, office, and outdoor use</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
@@ -377,7 +377,36 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p7.jpg" alt="">
+                                <img class="img-fluid" src="img/product/20-liter-pet-bottol.png" alt="">
+                                <div class="product-details">
+                                    <h6>20-Liter PET Bottle – No Tap </h6>
+                                    <p>Available in 630g, 660g, and 700g, these sturdy PET bottles are perfect for storing and transporting large volumes. Ideal for both commercial & personal use</p>
+                                    <div class="prd-bottom">
+
+                                        <a href="" class="social-info">
+                                            <span class="ti-bag"></span>
+                                            <p class="hover-text">add to bag</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-heart"></span>
+                                            <p class="hover-text">Wishlist</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-sync"></span>
+                                            <p class="hover-text">compare</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-move"></span>
+                                            <p class="hover-text">view more</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single product -->
+                        <div class="col-lg-3 col-md-6">
+                            <div class="single-product">
+                                <img class="img-fluid" src="img/product/120-mm-jar.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
@@ -406,7 +435,94 @@
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/p8.jpg" alt="">
+                                <img class="img-fluid" src="img/product/dispancer-plastic-ring.png" alt="">
+                                <div class="product-details">
+                                    <h6>addidas New Hammer sole
+                                        for Sports person</h6>
+                                    <div class="prd-bottom">
+
+                                        <a href="" class="social-info">
+                                            <span class="ti-bag"></span>
+                                            <p class="hover-text">add to bag</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-heart"></span>
+                                            <p class="hover-text">Wishlist</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-sync"></span>
+                                            <p class="hover-text">compare</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-move"></span>
+                                            <p class="hover-text">view more</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single product -->
+                        <div class="col-lg-3 col-md-6">
+                            <div class="single-product">
+                                <img class="img-fluid" src="img/product/cap.png" alt="">
+                                <div class="product-details">
+                                    <h6>addidas New Hammer sole
+                                        for Sports person</h6>
+                                    <div class="prd-bottom">
+
+                                        <a href="" class="social-info">
+                                            <span class="ti-bag"></span>
+                                            <p class="hover-text">add to bag</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-heart"></span>
+                                            <p class="hover-text">Wishlist</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-sync"></span>
+                                            <p class="hover-text">compare</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-move"></span>
+                                            <p class="hover-text">view more</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single product -->
+                        <div class="col-lg-3 col-md-6">
+                            <div class="single-product">
+                                <img class="img-fluid" src="img/product/dolphine-dispancer.png" alt="">
+                                <div class="product-details">
+                                    <h6>addidas New Hammer sole
+                                        for Sports person</h6>
+                                    <div class="prd-bottom">
+
+                                        <a href="" class="social-info">
+                                            <span class="ti-bag"></span>
+                                            <p class="hover-text">add to bag</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-heart"></span>
+                                            <p class="hover-text">Wishlist</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-sync"></span>
+                                            <p class="hover-text">compare</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-move"></span>
+                                            <p class="hover-text">view more</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single product -->
+                        <div class="col-lg-3 col-md-6">
+                            <div class="single-product">
+                                <img class="img-fluid" src="img/product/kent-tap.png" alt="">
                                 <div class="product-details">
                                     <h6>addidas New Hammer sole
                                         for Sports person</h6>
