removing 3 section and adding testimonials and about-us section

--- a/about-us.html
+++ b/about-us.html
@@ -162,7 +162,27 @@
 
 
                 <h4>Packaging, Payment, and Shipment Details</h4>
+                <ul>
+                    Payment Mode: Cash, Cheque, DD, Online, Bank Transfer
+                </ul>
+                <ul>
+                    Shipment Mode: By Road
+                </ul>
 
+                <h3>Why Choose Us?</h3>
+                <p>At Star Plast, we prioritize our customers and their needs. Here’s why we are the preferred choice for many:</p>
+                <ul>
+                    <li><strong>Customer-Centric Approach:</strong><p>We take the time to thoroughly understand and focus on the specific needs of each customer.</p></li>
+                    <li><strong>Quality and Reliability:</strong><p>Our commitment to quality ensures that every product meets stringent standards and customer expectations.</p></li>
+                    <li><strong>Timely Delivery:</strong><p>We are dedicated to delivering products that align with our customers' requirements within the agreed timelines.</p></li>
+                    <li><strong>Effective Communication:</strong><p>We respond to customer inquiries and needs promptly and effectively, ensuring a seamless service experience.</p></li>
+                </ul>
+
+                <h4>For more information or inquiries, feel free to contact us at:</h4>
+                <ul>
+                    <li><strong>Email:</strong>&nbsp;<a href="mailto:starplast.co.in@gmail.com">starplast.co.in@gmail.com</a></li>
+                    <li><strong>Phone:</strong>&nbsp;<a href="tel:9535255655">+91 9535255655</a></li>
+                </ul>
 
 
 
