adding final details

--- a/index.html
+++ b/index.html
@@ -465,8 +465,10 @@
                                 <!-- end product Area -->
 
 
-                                <section class="testimonial-section">
+                                <!-- start testimonial section -->
 
+                                    <center> <h1 style="padding-bottom: 20px;"> Testimonials </h1></center>
+                                <section class="testimonial-section">
                                     <div class="wrap-testimonials">
                                         <div class="testimonials">
                                             <div class="testimonial-img-wrapper"">
@@ -497,6 +499,7 @@
                                         </div>
                                     </div>
                                 </section>
+                                <!-- end testimonial section -->
 
                                     <!-- start about us section -->
                                     <section  class="about-us section-padding" id="about-us">
@@ -567,8 +570,65 @@
                                             </div> <!-- end row -->
                                         </div> <!-- end container -->
                                     </section>
-
                                     <!-- end about us section -->
+
+
+                                    <!-- contact us start section -->
+<section class="contact_area section_gap_bottom">
+    <center> <h1> Contact Us </h1></center>
+            <div class="container">
+                <div class="mapbox">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d485.921407594943!2d77.50008273659365!3d13.012013674113907!3m2!1i1024!2i768!4f13.1!2m1!1sstar%20plast!5e0!3m2!1sen!2sin!4v1718536951121!5m2!1sen!2sin" width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="contact_info">
+                            <div class="info_item">
+                                <i class="lnr lnr-home"></i>
+                                <h6> Kalika Nagar, Peenya, Bengaluru</h6>
+                                <p>Industrial Estate, 8th Main Rd, 2nd Stage,</p>
+                            </div>
+                            <div class="info_item">
+                                <i class="lnr lnr-phone-handset"></i>
+                                <h6><a href="tel:9535255655">+91 9535 255 655</a></h6>
+                                <p>Mon to Fri 9am to 6 pm</p>
+                            </div>
+                            <div class="info_item">
+                                <i class="lnr lnr-envelope"></i>
+                                <h6><a href="mailto:starplast.co.in@gmail.com">starplast.co.in@gmail.com</a></h6>
+                                <p>Send us your query anytime!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-9">
+                        <form class="row contact_form" action="mailto:starplast.co.in@gmail.com?subject=Can%20you%20Contact%20me%20on%20mail" method="post" id="contactForm" novalidate="novalidate">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'">
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Subject'">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-12 text-right">
+                                <button type="submit" value="submit" class="primary-btn" style="background:#0aadf3">Send Message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+                                    <!-- contact us end section -->
+
+
 
                                     <!-- start footer Area -->
                                     <footer class="footer-area section_gap">
